--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "@prisma/client": "^5.0.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/react-stripe-js": "^2.1.1",
+    "@stripe/stripe-js": "^1.54.1",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "redux-persist": "^6.0.0",
+    "stripe": "^12.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
